--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
     "deploy": "./deploy.sh"
+  },
+  "dependencies": {
+    "markdown-it-codesandbox": "^1.0.1",
+    "@vuepress/plugin-back-to-top": "^1.0.0-rc.1",
+    "@vuepress/plugin-google-analytics": "^1.1.0",
+    "@vuepress/plugin-nprogress": "^1.0.0-rc.1"
   }
 }
