feat PR-6 Intellij - plant uml 사용법 작성

--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "deploy": "./deploy.sh"
   },
   "devDependencies": {
-    "@vuepress/plugin-blog": "^1.5.1",
-    "@vuepress/plugin-google-analytics": "^1.2.0",
-    "@vuepress/plugin-last-updated": "^1.2.0",
-    "@vuepress/plugin-medium-zoom": "^1.2.0",
+    "markdown-it-multimd-table": "^4.0.0",
     "markdown-it-plantuml": "^1.4.1",
     "vuepress": "^1.2.0",
     "vuepress-theme-meteorlxy": "^1.7.1"
