--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "markdown-it-multimd-table": "^4.0.0",
     "markdown-it-plantuml": "^1.4.1",
+    "markdown-it-sup": "^1.0.0",
     "vuepress": "^1.5.0",
     "vuepress-theme-meteorlxy": "^1.9.0",
     "vuepress-plugin-container": "^2.1.3"
