--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "markdown-it-sup": "^1.0.0",
     "vuepress": "^1.5.2",
     "vuepress-theme-meteorlxy": "^1.9.0",
-    "vuepress-plugin-container": "^2.1.3"
+    "vuepress-plugin-container": "^2.1.3",
+    "vuepress-plugin-rss": "^2.0.0"
   }
 }
