--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "vuepress": "^1.5.2",
     "vuepress-theme-meteorlxy": "^1.9.0",
     "vuepress-plugin-container": "^2.1.3",
-    "vuepress-plugin-rss": "^2.0.0"
+    "rss": "^1.2.2"
   }
 }
